[package]
name = "kasy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kasy"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    # Core subsystems
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "experimental_pbr_pcss",
    # Linux windowing (X11); also works on CI runners
    "x11",
    # WebGPU renderer – enables the modern WebGPU backend (required for WASM deployments)
    "webgpu",
] }

# Ensure the correct getrandom backends are used when targeting WebAssembly.
# getrandom v0.2.x (used by rand and others) needs the `js` feature.
# getrandom v0.3.x (used by ahash via bevy_utils) needs the `wasm_js` feature.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# Optimise release builds for small binary size (important for WASM)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# WASM release profile – inherits all release settings but uses thin LTO so
# that incremental builds only re-optimise changed crates rather than running
# a full fat-LTO pass over the entire Bevy dependency tree (~2 min saving).
[profile.wasm-release]
inherits = "release"
lto = "thin"

# Speed up debug builds by optimising dependencies but not our own code
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
